added mobile design changes and mailto for email

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/uog0dio.css" />
     <link rel="stylesheet" href="main.css" />
     <title>We are YNC</title>
-    <meta name="description" content="We're rebranding. Get excited.">
+    <meta name="description" content="We're rebranding. Get excited." />
   </head>
 
   <body>
@@ -194,7 +194,7 @@
         </p>
 
         <p class="paragraph">
-          &#128075; ️hello@weareync.co
+          <a href="mailto:hello@weareync.co">&#128075; ️hello@weareync.co</a>
         </p>
       </footer>
     </main>
