changed logo to a button, changed coming soon to a span

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="https://use.typekit.net/uog0dio.css" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./main.css" />
     <title>We are YNC</title>
     <meta name="description" content="We're rebranding. Get excited." />
   </head>
@@ -20,7 +20,7 @@
   <body>
     <main class="page">
       <header class="header">
-        <a class="logo" href="/">
+        <button class="logo">
           <svg
             width="54"
             height="54"
@@ -37,11 +37,11 @@
               stroke-linejoin="round"
             />
           </svg>
-        </a>
+        </button>
 
-        <a class="coming-soon">
+        <span class="coming-soon">
           Coming Soon
-        </a>
+        </span>
       </header>
 
       <section class="body">
@@ -198,6 +198,6 @@
         </p>
       </footer>
     </main>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
