--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="https://use.typekit.net/uog0dio.css" />
     <link rel="stylesheet" href="./main.css" />
-    <title>We are YNC</title>
-    <meta name="description" content="We're rebranding. Get excited." />
+    <title>SaaS Marketing Agency | YNC</title>
+    <meta name="description" content="Supporting SaaS businesses since 2013. Results driven, growth focused team for SaaS businesses." />
   </head>
 
   <body>
